# tbs

./: .gitignore  Makefile  README.md  make-compiler-tests.sh  make.sh  meson.build  test.c  types-test.c
inc/tbs/: arch.h  types.h
tbs/: types.h
tst/: meson.build  mktst.sh  sizeof-f32.c  sizeof-f64.c  sizeof-fMax.c  sizeof-i16.c  sizeof-i32.c  sizeof-i64.c  sizeof-i8.c  sizeof-iMax.c  sizeof-test-template.h  sizeof-u16.c  sizeof-u32.c  sizeof-u64.c  sizeof-u8.c  sizeof-uMax.c
